@@ -109,6 +109,7 @@ Example : alias\n\r\
 Example : alias define fk flykick\n\r\
 Example : alias define fk\n\r\
 Example : alias test fk args\n\r\
+Example : alias copy otherplayername\n\r\
 Short(s): \n\r\
 This command will allow a player to manage a list of alias command \
 strings.  Any command string a player enters which begins with one \
@@ -124,7 +125,8 @@ variable(s) such as \@x1, \@x2, etc.. are found in the definition. \n\r\
 New aliases can also be added or removed on the command line using the \
 define argument.  The alias key is always required for a define, but \
 you can also give the aliased commands to add, or leave them out to remove \
-the key.  They can then be tested by using the TEST argument.
+the key.  They can then be tested by using the TEST argument.  The COPY \
+argument can be used to copy another player's aliases.
 
 AREAS=\
 Command : AREAS\n\r\
